kubernetes/service_thymeleaf.yml
apiVersion: v1
kind: Service
metadata:
  name: thymeleaf-spring-service
  labels:
    app: thymeleaf-spring
spec:
  type: LoadBalancer
  #type: ClusterIP
#  type: NodePort
  selector:
    app: thymeleaf-spring
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
#      nodePort: 30080     # Minikube NodePort (외부 접근용 포트)
