kubernetes/ingress.yml
# spring-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sample-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /nuxt/$2 # Rewrite Target 설정 (regEx 활용)
    nginx.ingress.kubernetes.io/use-regex: "true"  # 정규식 활성화
spec:
  rules:
    - host: sample.local
      http:
        paths:
          - path: /nuxt(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: nuxt-service
                port:
                  number: 3000
          - path: /(.*)
            pathType: Prefix
            backend:
              service:
                name: thymeleaf-spring-service
                port:
                  number: 8080
